--- a/ui/Hazelcast Vector Similarity.ipynb
+++ b/ui/Hazelcast Vector Similarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "df52bff6-f8a9-401b-81aa-f8395dc7e853",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "65e899e2-6f52-4e87-8890-cf9291914ac2",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c5a87301-5d8f-48e7-93ab-49cb0ce3c941",
    "metadata": {},
    "outputs": [
@@ -41,22 +41,22 @@
    "source": [
     "# initialize the sentence transformer \n",
     "import sentence_transformers\n",
-    "encoder = sentence_transformers.SentenceTransformer('/project/models/clip-ViT-B-32')"
+    "encoder = sentence_transformers.SentenceTransformer('/project/models/clip-ViT-B-32');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "290b7d83-4c93-4d9e-aed9-f78fde300174",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "88"
+       "0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "d21e9974-9135-41c8-b4b4-c0d78585910f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"http://localhost:8000/minaret_0018.jpg\"/>"
+       "<img src=\"http://localhost:8000/dragonfly_0013.jpg\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
@@ -87,13 +87,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score=0.6180250644683838\n"
+      "score=0.6607595682144165\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<img src=\"http://localhost:8000/pagoda_0011.jpg\"/>"
+       "<img src=\"http://localhost:8000/dragonfly_0015.jpg\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
@@ -106,13 +106,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score=0.6100836396217346\n"
+      "score=0.6525623798370361\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<img src=\"http://localhost:8000/pagoda_0013.jpg\"/>"
+       "<img src=\"http://localhost:8000/mayfly_0009.jpg\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score=0.6082080602645874\n"
+      "score=0.6375383138656616\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
     "import requests\n",
     "from io import BytesIO\n",
     "\n",
-    "queries = encoder.encode(\"mountains\")\n",
+    "queries = encoder.encode(\"dragonfly\")\n",
     "\n",
     "search_vector = Vector(name='semantic-search', type = VectorType.DENSE, vector=queries.tolist())\n",
     "results = vectors.search_near_vector(search_vector,include_value=True, limit=3)\n",
